--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -1,9 +1,10 @@
 {
   "recommendations": [
     "antfu.theme-vitesse",
+    "antfu.icons-carbon",
+    "PKief.material-icon-theme",
     "dbaeumer.vscode-eslint",
     "esbenp.prettier-vscode",
-    "PKief.material-icon-theme",
     "Gruntfuggly.todo-tree",
     "rangav.vscode-thunder-client",
     "cweijan.vscode-database-client2",
