--- a/package.json
+++ b/package.json
@@ -1,56 +1,64 @@
 {
-  "name": "vi-express-base",
-  "version": "1.0.0",
-  "description": "Express application base",
-  "keywords": [],
-  "license": "",
-  "author": "Shah Bakhteyar Haider",
-  "main": "build/index.js",
-  "scripts": {
-    "build": "tsc",
-    "clean": "rimraf ./build",
-    "dev": "export NODE_ENV=development && nodemon",
-    "gen-env-td": "typeEnv --path=src/typings",
-    "lint": "eslint ./src/ --ext .ts",
-    "sort-pkg": "sort-package-json",
-    "start": "export NODE_ENV=production && node build/index.js",
-    "test": "jest",
-    "vet": "npmvet"
-  },
-  "dependencies": {
-    "config": "3.3.7",
-    "cors": "2.8.5",
-    "express": "4.17.3",
-    "express-async-handler": "1.2.0",
-    "http-close": "1.0.0",
-    "http-status-codes": "2.2.0",
-    "tslib": "2.3.1"
-  },
-  "devDependencies": {
-    "@eliasgcf/type-env": "1.0.0",
-    "@types/config": "0.0.41",
-    "@types/cors": "2.8.12",
-    "@types/express": "4.17.13",
-    "@types/jest": "27.4.1",
-    "@types/node": "17.0.21",
-    "@types/supertest": "2.0.11",
-    "@typescript-eslint/eslint-plugin": "5.14.0",
-    "@typescript-eslint/parser": "5.14.0",
-    "eslint": "8.10.0",
-    "eslint-config-airbnb-base": "15.0.0",
-    "eslint-config-prettier": "8.5.0",
-    "eslint-import-resolver-typescript": "2.5.0",
-    "eslint-plugin-import": "2.25.4",
-    "eslint-plugin-prettier": "4.0.0",
-    "jest": "27.5.1",
-    "nodemon": "2.0.15",
-    "npmvet": "0.1.5",
-    "prettier": "2.5.1",
-    "rimraf": "3.0.2",
-    "sort-package-json": "1.54.0",
-    "supertest": "6.2.2",
-    "ts-jest": "27.1.3",
-    "ts-node": "10.7.0",
-    "typescript": "4.6.2"
-  }
+	"name": "vi-express-base",
+	"version": "1.0.0",
+	"description": "Express application base",
+	"keywords": [],
+	"license": "",
+	"author": "Shah Bakhteyar Haider",
+	"main": "build/index.js",
+	"scripts": {
+		"build": "tsc",
+		"clean": "rimraf ./build",
+		"clean-build": "npm run clean && npm run build",
+		"dev": "cross-env NODE_ENV=development nodemon",
+		"env-td": "typeenv",
+		"format": "prettier -c ./ -w",
+		"lint": "eslint ./",
+		"sort-pkg": "sort-package-json",
+		"start": "cross-env NODE_ENV=production node build/index.js",
+		"test": "jest",
+		"vet": "npmvet"
+	},
+	"dependencies": {
+		"config": "3.3.7",
+		"cors": "2.8.5",
+		"cross-env": "7.0.3",
+		"express": "4.17.3",
+		"express-async-handler": "1.2.0",
+		"http-close": "1.0.0",
+		"http-status-codes": "2.2.0",
+		"module-alias": "2.2.2",
+		"reflect-metadata": "0.1.13",
+		"tslib": "2.3.1",
+		"typedi": "0.10.0"
+	},
+	"devDependencies": {
+		"@eliasgcf/type-env": "1.0.0",
+		"@types/config": "0.0.41",
+		"@types/cors": "2.8.12",
+		"@types/express": "4.17.13",
+		"@types/jest": "27.4.1",
+		"@types/module-alias": "2.0.1",
+		"@types/node": "17.0.21",
+		"@types/supertest": "2.0.11",
+		"@typescript-eslint/eslint-plugin": "5.15.0",
+		"@typescript-eslint/parser": "5.15.0",
+		"eslint": "8.11.0",
+		"eslint-config-airbnb-base": "15.0.0",
+		"eslint-config-prettier": "8.5.0",
+		"eslint-import-resolver-typescript": "2.5.0",
+		"eslint-plugin-import": "2.25.4",
+		"eslint-plugin-jest": "26.1.1",
+		"eslint-plugin-prettier": "4.0.0",
+		"jest": "27.5.1",
+		"nodemon": "2.0.15",
+		"npmvet": "0.1.5",
+		"prettier": "2.5.1",
+		"rimraf": "3.0.2",
+		"sort-package-json": "1.54.0",
+		"supertest": "6.2.2",
+		"ts-jest": "27.1.3",
+		"ts-node": "10.7.0",
+		"typescript": "4.6.2"
+	}
 }
