--- a/.prettierrc.json
+++ b/.prettierrc.json
@@ -1,7 +1,7 @@
 {
-	"printWidth": 80,
-	"endOfLine": "lf",
-	"tabWidth": 2,
-	"semi": true,
-	"useTabs": true
+  "printWidth": 80,
+  "endOfLine": "lf",
+  "tabWidth": 2,
+  "semi": true,
+  "useTabs": false
 }
